# games

./: CMakeLists.txt  README.md  Sources.cmake  changes_to_stamina
examples/CAs/: caex
examples/CAs/fpred/: abb_fpred  abbaa2_fpred
examples/CAs/shred/: a2_shred1  a3_shred1  a4_shred1  a5_shred1  ab2_shred1  abb_shred1  abbaa2_shred1
examples/DFAs/: a2  a3  a4  a5  ab2  abb  abbaa2
examples/scripts/: caex_x_20  comparison  example1  example2  fpred1_x_20  fpred2_x_20  longtest  longtest2  test_rnd
examples/scripts/output/: modes_caex_stats  modes_fp_abb_stats  modes_fp_abbaa2_stats  modes_sh_ab2_stats  modes_sh_abb_stats  sh_a2_stats  sh_a3_stats  sh_a5_stats  sh_abbaa2_stats
games/: condition.cpp  condition.h  games.cpp  games.h  iostuff.cpp  iostuff.h  main.cpp  options.cpp  options.h  output.cpp  output.h  parity.cpp  parity.h  parser.cpp  parser.h  tests.cpp  tests.h  wrapper.cpp  wrapper.h
stamina/: Automata.cpp  VectorInt.hpp
